@@ -1,5 +1,7 @@
 1.0.1
 - added isIdCurrent for improved compatibility with RSQLite
+- new option monetdb.log.query allows export of dbSendQuery statements to file
+
 
 1.0.0
 - Added support for esoteric data types such as MONTH_INTERVAL (Thanks, Roman)
